--- a/2603_ERM.tex
+++ b/2603_ERM.tex
@@ -307,7 +307,7 @@ What happen if interest rate rise to 5\% ?
    \medskip
 \end{itemize}
 \end{itemize}
- \href{https://github.com/fsananou/bsb-erm/blob/ebbd7723a3ce60ced169f337c8f0b4d8e8cad564/var_es_exercices.pdf}{\ovalbox{VaR and ES exercices}}
+ \href{https://github.com/fsananou/bsb-erm/blob/ebbd7723a3ce60ced169f337c8f0b4d8e8cad564/var_es_exercices.pdf}{\ovalbox{Practice}}
 
 \end{column}
 
@@ -505,7 +505,7 @@ managed (process).
 \end{block}
 \medskip
 
- \href{https://github.com/fsananou/bsb-erm/blob/main/case_studies.pdf}{\ovalbox{Cases studies 1 and 2 }}
+ \href{https://github.com/fsananou/bsb-erm/blob/main/case_studies.pdf}{\ovalbox{Practice}}
 
 \end{frame}
 
@@ -1228,7 +1228,7 @@ ERM fails when incentives and culture neutralize governance.
 \end{block}
 \medskip 
 
- \href{https://github.com/fsananou/bsb-erm/blob/main/case_studies.pdf}{\ovalbox{Case study 3}}
+ \href{https://github.com/fsananou/bsb-erm/blob/main/case_studies.pdf}{\ovalbox{Practice}}
 \end{frame}
 
 \subsection{Chap1}
@@ -1790,6 +1790,13 @@ ERM assesses hedging both \emph{before} and \emph{after} implementation.
   \]
   to detect model drift, breakdowns, or unintended risk amplification.
 
+  \end{itemize}
+
+  \end{frame}
+
+\begin{frame}{Hedging assessment}
+\begin{itemize}
+
   \item[$\bullet$] \textbf{ERM extension to tail risk:}
   Effectiveness is also assessed on downside risk:
   \[
@@ -1803,7 +1810,448 @@ A hedge is acceptable only if prospective and retrospective effectiveness
 remain robust under stress and do not create secondary enterprise risks.
 \end{block}
 
+\medskip 
+\medskip 
+
+ \href{https://github.com/fsananou/bsb-erm/blob/main/case_studies.pdf}{\ovalbox{Practice}}
+
 \end{frame}
 
+\begin{frame}{}
+
+\centering
+\color{blue} \Ovalbox{\textbf{ERM in practice}}
+
+\end{frame}
+\begin{frame}{Why ERM implementation is structurally difficult}
+
+ERM implementation fails not because principles are unclear, but because
+it conflicts with how organizations actually operate.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] ERM requires coordination across functions that are
+  traditionally autonomous (finance, risk, business, strategy).
+
+  \item[$\bullet$] Risk considerations often impose constraints on growth,
+  leverage, or profitability, which creates natural resistance.
+
+  \item[$\bullet$] The benefits of ERM are probabilistic and long-term,
+  while the costs (foregone opportunities, additional controls) are immediate.
+\end{itemize}
+
+\begin{block}{Implementation insight}
+ERM is difficult because it changes incentives and power, not because it
+lacks tools.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Common ERM failure modes}
+
+Many organizations formally adopt ERM while neutralizing its impact.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] \textbf{Box-ticking ERM:} risk registers and policies exist,
+  but they are disconnected from actual decisions.
+
+  \item[$\bullet$] \textbf{Risk reporting without consequence:} dashboards are
+  produced, but no action follows deterioration.
+
+  \item[$\bullet$] \textbf{Over-measurement:} excessive metrics dilute attention
+  and create a false sense of control.
+
+  \item[$\bullet$] \textbf{Fragmentation:} risk categories are managed in silos,
+  preventing portfolio-level insight.
+\end{itemize}
+
+\begin{block}{Diagnostic}
+ERM fails when it produces information but does not alter behavior.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Deeper failure modes: incentives and governance}
+
+The most damaging ERM failures originate in incentive structures.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Performance evaluation emphasizes short-term accounting
+  outcomes rather than risk-adjusted or long-term value.
+
+  \item[$\bullet$] Business units are rewarded for growth and volume, while
+  risk functions bear responsibility without authority.
+
+  \item[$\bullet$] Exception processes become systematic, undermining formal
+  limits and risk appetite.
+
+  \item[$\bullet$] Risk signals are softened or delayed as they move up the
+  hierarchy.
+\end{itemize}
+
+\begin{block}{ERM reality}
+Risk cannot be governed if those who take risk do not bear its consequences.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{ERM as a change management problem}
+
+Implementing ERM requires altering how decisions are proposed, challenged,
+and approved.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Managers must justify decisions not only in terms of return,
+  but also in terms of risk and resilience.
+
+  \item[$\bullet$] ERM introduces structured challenge, which can be perceived
+  as loss of autonomy or trust.
+
+  \item[$\bullet$] Without visible support from top management, ERM is easily
+  bypassed or marginalized.
+\end{itemize}
+
+\begin{block}{Key condition}
+ERM succeeds only when senior leadership actively uses it in decisions.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Integrating ERM into strategic planning}
+
+ERM must shape strategic choices rather than react to them.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Strategic plans should explicitly state key risk assumptions
+  about markets, funding, regulation, and technology.
+
+  \item[$\bullet$] Scenario analysis should test strategy robustness under
+  adverse but plausible conditions.
+
+  \item[$\bullet$] ERM should identify which strategic options are fragile
+  versus resilient across scenarios.
+\end{itemize}
+
+\begin{block}{Strategic test}
+Would this strategy still be acceptable if key assumptions fail?
+\end{block}
+
+\end{frame}
+
+
+\begin{frame}{Integrating ERM into budgeting and forecasting}
+
+Budgeting is a critical but often neglected ERM entry point.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Budgets typically reflect optimistic point forecasts rather
+  than distributions of outcomes.
+
+  \item[$\bullet$] ERM introduces downside scenarios and stress assumptions
+  into revenue, cost, and funding projections.
+
+  \item[$\bullet$] Risk appetite should constrain budgeted growth, leverage,
+  and concentration.
+\end{itemize}
+
+\begin{block}{Implementation rule}
+If budgets ignore downside risk, ERM is not embedded.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{ERM in capital allocation and investment approval}
+
+Capital allocation is where ERM becomes binding.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Investment proposals should include risk-adjusted performance
+  metrics and stress outcomes.
+
+  \item[$\bullet$] ERM enables comparison of projects with different risk
+  profiles competing for limited capital.
+
+  \item[$\bullet$] Projects that are profitable in expectation may be rejected
+  if they increase fragility at portfolio level.
+\end{itemize}
+
+\begin{block}{Decision logic}
+ERM shifts the focus from isolated profitability to portfolio resilience.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Dashboards: role and common pitfalls}
+
+Dashboards are often overestimated as ERM solutions.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Dashboards summarize information but do not create discipline
+  by themselves.
+
+  \item[$\bullet$] Excessive indicators dilute attention and mask deterioration.
+
+  \item[$\bullet$] Backward-looking metrics provide comfort rather than early
+  warning.
+\end{itemize}
+
+\begin{block}{Key insight}
+Dashboards support ERM only when linked to escalation and action.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Designing dashboards that support ERM}
+
+Effective ERM dashboards are selective and forward-looking.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] Indicators should be explicitly linked to risk appetite
+  and strategic objectives.
+
+  \item[$\bullet$] Trends, concentrations, and stress metrics are more
+  informative than point estimates.
+
+  \item[$\bullet$] Visual design should make deterioration immediately visible,
+  without interpretation.
+\end{itemize}
+
+\begin{block}{Design principle}
+If escalation thresholds are not obvious, the dashboard fails.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Reporting, escalation, and accountability}
+
+Information without accountability does not reduce risk.
+
+\medskip
+
+\begin{itemize}
+  \item[$\bullet$] ERM reporting should define clear thresholds that trigger
+  mandatory discussion or action.
+
+  \item[$\bullet$] Responsibilities for response must be explicit and
+  documented.
+
+  \item[$\bullet$] Failure to escalate should itself be treated as a risk event.
+\end{itemize}
+
+\begin{block}{ERM mechanism}
+ERM works when risk signals force decisions, not explanations.
+\end{block}
+
+\end{frame}
+
+\begin{frame}{What makes ERM work in practice}
+
+\begin{itemize}
+  \item[$\bullet$] ERM must be embedded in planning, budgeting, and capital
+  allocation.
+
+  \item[$\bullet$] Incentives and authority must be aligned with risk ownership.
+
+  \item[$\bullet$] Tools and dashboards support judgment but do not replace it.
+\end{itemize}
+
+\begin{block}{Final takeaway}
+ERM succeeds when it systematically changes how decisions are made under
+uncertainty.
+\end{block}
+
+\end{frame}
+
+% ========= PART IV — ERM across industries (2h): mini cases (Beamer) =========
+% Assumes you already have \documentclass{beamer} and usual packages.
+% Uses \item[$\bullet$] as requested and sentence case frame titles.
+
+% ---------- Intro ----------
+\begin{frame}{ERM across industries: four mini cases}
+\begin{itemize}
+  \item[$\bullet$] Same ERM principles, different industry economics.
+  \item[$\bullet$] Each case is designed for diagnosis: identify ERM design, what failed, and why.
+  \item[$\bullet$] Focus on interactions: risk categories, instruments, governance, incentives.
+\end{itemize}
+\begin{block}{Group task}
+For each case: (i) identify the dominant risks and their interaction, (ii) infer ERM architecture, (iii) explain failure modes, (iv) propose 1--2 ERM improvements.
+\end{block}
+\end{frame}
+
+% ---------- Case 1: Financial institutions (SVB) ----------
+\begin{frame}{Mini case: financial institution — Silicon Valley Bank (SVB)}
+SVB’s business model was highly concentrated in technology startups and venture
+capital clients. Deposit growth surged in the low-rate period, with a deposit base
+dominated by large, uninsured corporate balances that were highly confidence-sensitive.
+The bank invested a substantial share of excess deposits into long-duration fixed-income
+securities (Treasuries and agency MBS). While credit risk was limited, the duration
+exposure created substantial interest rate risk as rates rose in 2022--2023.
+
+As market values declined, unrealized losses accumulated. Risk measurement and regulatory
+reporting existed, but ERM did not translate these signals into binding decisions. Hedging
+of interest rate risk was reduced rather than increased, partly to preserve short-term
+earnings. Liquidity stress testing did not fully reflect the speed and concentration of
+outflows possible in a networked depositor base. When concerns surfaced, withdrawals
+accelerated rapidly and the interaction between interest rate losses, liquidity pressure,
+and confidence dynamics resulted in a rapid bank run and failure.
+\end{frame}
+
+\begin{frame}{SVB: questions for diagnosis}
+\begin{enumerate}
+  \item Which risks were central (interest rate, liquidity, concentration, confidence)? How did they amplify each other?
+  \item What ERM elements likely existed (limits, ALM, stress tests, governance) and where did they fail to affect decisions?
+  \item Why can compliance and measurement coexist with failure? Identify the decision points that should have changed.
+  \item What would an ERM redesign prioritize: deposit concentration governance, hedging policy, escalation, or incentives?
+\end{enumerate}
+\end{frame}
+
+% ---------- Case 2: Energy & commodities (Metallgesellschaft) ----------
+\begin{frame}{Mini case: energy and commodities — Metallgesellschaft (1993)}
+Metallgesellschaft, via its U.S. subsidiary, offered long-term fixed-price contracts
+for petroleum products, creating long-horizon exposure to commodity price changes.
+To hedge, it built a large futures position in short-dated oil contracts and rolled
+them over time. Economically, the hedge aimed to offset long-term price risk using a
+dynamic futures strategy.
+
+The design was vulnerable to liquidity stress. As prices moved against the futures
+position, variation margin outflows surged. Even if the hedge could work economically
+over the long run, it required short-run funding capacity to survive adverse moves.
+Management underestimated the scale and persistence of margin calls and the governance
+needed to manage liquidity and unwind risk. The interaction between market risk,
+liquidity risk, and governance led to forced unwinds at losses, turning a hedging
+program into an enterprise-level crisis.
+\end{frame}
+
+\begin{frame}{Metallgesellschaft: questions for diagnosis}
+\begin{enumerate}
+  \item Why can a hedge be economically rational yet operationally fragile? Identify the key mechanism.
+  \item Which enterprise risks were created by the hedge (liquidity, basis, governance, model dependence)?
+  \item What hedging assessment should ERM have required (stress margin funding, survival horizon, escalation)?
+  \item Propose an ERM-compliant redesign: instruments (options vs futures), limits, funding buffer, governance.
+\end{enumerate}
+\end{frame}
+
+% ---------- Case 3: Non-financial corporation (Boeing 737 MAX) ----------
+\begin{frame}{Mini case: non-financial corporation — Boeing and the 737 MAX}
+Boeing operates in a safety-critical industry where operational and reputational
+risks dominate financial hedging logic. The development of the 737 MAX took place
+under intense competitive pressure and strong time-to-market constraints. Key design
+and certification choices emphasized speed and cost containment. Safety risks related
+to new flight control functionality were not escalated effectively, and internal
+challenge mechanisms proved weak.
+
+Formal risk processes and compliance structures existed, but they did not constrain
+strategic and operational decisions. After two fatal accidents, the aircraft was
+grounded globally, producing severe financial losses, reputational damage, and long
+regulatory scrutiny. The episode illustrates how ERM can fail primarily through
+governance, culture, and incentives, even when risks are knowable and procedures exist.
+\end{frame}
+
+\begin{frame}{Boeing: questions for diagnosis}
+\begin{enumerate}
+  \item What were the dominant risk families (operational safety, strategic, regulatory, reputational)?
+  \item Where did ERM fail: identification, escalation, challenge, or incentive alignment?
+  \item What signals should have triggered escalation, and why might they have been filtered or ignored?
+  \item Propose two ERM architecture changes that increase challenge power without paralyzing innovation.
+\end{enumerate}
+\end{frame}
+
+% ---------- Case 4: Public sector & infrastructure (megaprojects) ----------
+\begin{frame}{Mini case: public sector and infrastructure — megaproject risk}
+Large public infrastructure projects (rail, transit, airports) face long horizons,
+multiple stakeholders, political oversight, and high public visibility. Initial project
+approval often relies on optimistic forecasts for costs, timelines, and demand. Even
+where formal risk frameworks exist, downside risks are systematically underestimated
+because incentives favor launching projects and because accountability is diffuse.
+
+As implementation proceeds, technical complexity, regulatory changes, procurement
+frictions, and stakeholder opposition compound initial underestimation. Risk registers
+may document risks, but ERM frequently lacks authority to halt projects, force major
+redesign, or credibly escalate bad news. The result is a pattern of cost overruns,
+delays, and legitimacy loss. The case highlights that in the public sector, the core
+ERM challenge is often governance and incentive compatibility rather than measurement.
+\end{frame}
+
+\begin{frame}{Megaprojects: questions for diagnosis}
+\begin{enumerate}
+  \item Why do public projects tend to exhibit optimism bias and weak downside planning?
+  \item How do political incentives and diffuse accountability constrain ERM effectiveness?
+  \item What should an ERM escalation mechanism look like when decision rights are political?
+  \item Propose an ERM design that introduces credible challenge (stage gates, independent review, stop rules).
+\end{enumerate}
+\end{frame}
+
+% ---------- Cross-case synthesis ----------
+\begin{frame}{Cross-case synthesis: what differs, what remains}
+\begin{itemize}
+  \item[$\bullet$] Financial institutions: small shocks can threaten solvency/liquidity; models and capital are central, but governance is decisive.
+  \item[$\bullet$] Energy/commodities: derivatives are powerful, but margining and liquidity can dominate outcomes under stress.
+  \item[$\bullet$] Non-financial corporations: ERM is mainly governance, escalation, and culture; technical risk is often not the binding constraint.
+  \item[$\bullet$] Public sector: ERM is constrained by politics and accountability; challenge must be institutionalized through process and independence.
+\end{itemize}
+\begin{block}{Unifying insight}
+ERM succeeds when it changes decisions under uncertainty and fits the organization’s incentives and constraints.
+\end{block}
+\end{frame}
+
+% ---------- Optional: comparison matrix slide (compact) ----------
+\begin{frame}{Comparison matrix: architecture, instruments, typical failure}
+\small
+\begin{tabular}{p{2.6cm}p{3.4cm}p{3.6cm}}
+\hline
+\textbf{Industry} & \textbf{Typical ERM anchor} & \textbf{Frequent failure mode} \\
+\hline
+Financial institutions & Capital, liquidity, stress tests, board risk governance & Model comfort + ignored signals; liquidity run dynamics \\
+Energy \& commodities & Hedging policy + liquidity buffers + scenario culture & Margin spiral; basis/correlation breakdown; weak governance \\
+Non-financial corporates & Governance, escalation, culture, controls & Incentives dominate; bad news filtered; safety/quality subordinated \\
+Public sector \& infrastructure & Stage gates, independent review, accountability & Optimism bias; weak stop rules; political override \\
+\hline
+\end{tabular}
+
+\medskip 
+
+ \href{https://github.com/fsananou/bsb-erm/blob/main/case_studies.pdf}{\ovalbox{Practice}}
+
+\end{frame}
+
+
+\begin{frame}{Ten common myths about enterprise risk management}
+
+\begin{itemize}
+  \item[$\bullet$] ERM eliminates risk rather than managing risk-taking.
+  \item[$\bullet$] More data and more models necessarily improve decisions.
+  \item[$\bullet$] Risks can be fully understood through quantitative metrics.
+  \item[$\bullet$] Hedging always reduces enterprise risk.
+  \item[$\bullet$] ERM is primarily a compliance or regulatory requirement.
+  \item[$\bullet$] Risk ownership can be delegated to a risk function.
+  \item[$\bullet$] Scenario analysis is a substitute for judgment.
+  \item[$\bullet$] Dashboards prevent surprises.
+  \item[$\bullet$] A well-designed ERM system cannot fail.
+  \item[$\bullet$] ERM failures are always due to lack of information.
+\end{itemize}
+
+\begin{block}{Final message}
+ERM succeeds not by predicting the future, but by shaping decisions under
+uncertainty.
+\end{block}
+
+\end{frame}
 
 \end{document}
