--- a/case_studies.tex
+++ b/case_studies.tex
@@ -500,6 +500,282 @@ outcomes.
   that would have reduced the severity of the crisis.
 \end{enumerate}
 
+\section{Case study: enterprise risk management at Shell}
+
+Shell plc is a global energy company with operations covering upstream
+exploration and production, integrated gas, chemicals, trading, power
+generation, and retail activities. Its business model exposes it to a wide
+range of uncertainties, including commodity price volatility, geopolitical
+risk, operational and safety hazards, regulatory change, and long-term
+transition risks related to climate and energy policy. The scale of its
+operations, combined with capital intensity and global reach, makes risk
+management a central component of corporate governance.
+
+Shell’s current approach to enterprise risk management has been shaped by
+historical crises, including major operational incidents and periods of
+financial stress. These events revealed weaknesses in governance, escalation,
+and oversight, and led to a deliberate strengthening of group-level risk
+management. As a result, Shell has positioned ERM not as a purely technical or
+compliance-driven activity, but as an integral part of decision-making and
+strategic oversight.
+
+At governance level, the Board of Directors retains ultimate responsibility
+for risk management and internal control. Specific oversight responsibilities
+are delegated to board committees. The Audit and Risk Committee reviews the
+effectiveness of Shell’s risk management and internal control systems, while
+the Safety, Environment and Sustainability Committee focuses on risks related
+to safety performance, environmental impact, and the energy transition. This
+structure reflects an explicit recognition that non-financial risks can be as
+material as financial risks.
+
+Within management, Shell operates a centralized enterprise risk management
+framework. Risk ownership is assigned to senior executives and business
+leaders, who remain accountable for the risks arising from their activities.
+The central risk function does not own risks; instead, it provides common
+methodologies, coordination across the group, and independent challenge. This
+separation between ownership and oversight is intended to ensure that risk
+remains embedded in line management rather than delegated to specialists.
+
+Shell identifies a limited set of \emph{principal risks} that are disclosed
+annually in its reporting. These principal risks represent those that could
+materially affect the company’s strategy, performance, financial position, or
+reputation. They include, among others, commodity price risk, geopolitical and
+regulatory risk, safety and operational incidents, climate transition risk,
+cyber risk, and liquidity and funding risk. The list is not static and evolves
+as the external environment and strategic priorities change.
+
+Risk assessment combines quantitative analysis with qualitative judgment and
+scenario-based thinking. For market-related risks, particularly commodity
+price exposure, Shell relies on quantitative metrics, stress testing, and
+risk limits within its trading and treasury activities. For longer-term and
+structural uncertainties, such as the pace of the energy transition or major
+geopolitical shifts, Shell uses scenario analysis rather than point forecasts.
+These scenarios are designed to test strategic resilience rather than predict
+specific outcomes.
+
+Risk responses are tailored to the nature of each principal risk. Operational
+risks are addressed through safety management systems, engineering standards,
+and process controls applied across the group. Financial risks, including
+commodity price, foreign exchange, and interest rate risks, are managed through
+a combination of natural hedging, portfolio diversification, and the use of
+derivative instruments. Derivatives are widely used in trading and treasury
+activities, but their use is governed by formal policies that define eligible
+instruments, limits, approval processes, and escalation thresholds. Hedging is
+intended to support the underlying business and protect cash flows rather than
+to eliminate all exposure.
+
+Liquidity risk management is treated as a core enterprise risk. Shell maintains
+substantial liquidity buffers and diversified funding sources to ensure
+resilience under stress. The firm explicitly considers the interaction between
+derivative hedging and liquidity, including the potential for margin calls
+during periods of market volatility. This reflects an awareness that hedging
+strategies can create short-term funding stress even when they are economically
+sound over the long term.
+
+Enterprise risk management is embedded in Shell’s strategic planning and
+capital allocation processes. Major investment decisions are evaluated not only
+on expected returns but also on their robustness under adverse scenarios and
+consistency with risk appetite and balance-sheet capacity. Long-term risks,
+particularly those related to climate and energy transition, are treated as
+strategic uncertainties that cannot be hedged through financial instruments.
+Instead, they are managed through portfolio diversification, staged investment,
+and strategic flexibility.
+
+Risk reporting is designed to support escalation and decision-making rather
+than passive monitoring. Reports to senior management and the board focus on
+key risk drivers, changes in the risk profile, and proximity to defined risk
+tolerances. When indicators deteriorate or approach limits, management is
+expected to respond by adjusting plans, revising exposures, or explicitly
+accepting the risk at the appropriate governance level.
+
+Overall, Shell’s enterprise risk management system reflects a principles-based
+and integrated approach. Risk management is embedded in governance, strategy,
+and capital allocation rather than operating as a separate technical layer.
+At the same time, the effectiveness of the system depends heavily on the
+quality of assumptions, the willingness of leaders to engage with challenge,
+and the organization’s ability to adapt when familiar risk patterns break
+down. The case therefore illustrates both how ERM is implemented in practice
+by a large multinational firm and why even sophisticated ERM cannot eliminate
+the possibility of failure.
+
+\subsection{Discussion questions}
+
+Answer the following questions using evidence from the case above. Answers
+should focus on reasoning and diagnosis rather than description.
+
+\subsubsection{ERM framework and philosophy}
+
+\begin{enumerate}
+  \item How would you characterize Shell’s ERM framework?
+  Is it primarily rules-based or principles-based? Compliance-oriented or
+  decision-oriented? Which elements of the case support your view?
+
+  \item Shell focuses on a limited number of \emph{principal risks}.
+  What does this reveal about its ERM philosophy, and what are the potential
+  trade-offs of this approach?
+
+  \item Why does Shell rely heavily on scenario analysis rather than point
+  forecasts for long-term risks? What does this imply about the limits of
+  quantitative risk measurement?
+\end{enumerate}
+
+\subsubsection{ERM architecture and governance}
+
+\begin{enumerate}
+  \setcounter{enumi}{3}
+  \item Identify the key components of Shell’s ERM architecture.
+  How are risk ownership and risk oversight allocated across the organization?
+
+  \item Why is the separation between business risk ownership and the central
+  ERM function emphasized? Under what circumstances could this separation
+  weaken risk management?
+
+  \item How might the existence of multiple board-level committees complicate
+  coordination and escalation of risks?
+\end{enumerate}
+
+\subsubsection{Risk integration and instruments}
+
+\begin{enumerate}
+  \setcounter{enumi}{6}
+  \item Identify several risk categories addressed in Shell’s ERM system.
+  How does the case suggest these risks are considered in an integrated way?
+
+  \item What role do derivative instruments play in Shell’s risk management?
+  Why are formal constraints on their use essential from an ERM perspective?
+
+  \item Why does Shell explicitly consider the liquidity implications of
+  derivative hedging? What type of failure is this designed to prevent?
+\end{enumerate}
+
+\subsubsection{Strategy, limits, and failure modes}
+
+\begin{enumerate}
+  \setcounter{enumi}{9}
+  \item How is ERM embedded in Shell’s strategic planning and capital allocation
+  processes? Give concrete examples from the case.
+
+  \item Which aspects of Shell’s ERM design appear most dependent on managerial
+  judgment rather than formal rules? Why does this matter?
+
+  \item Describe a plausible scenario in which Shell’s ERM system could fail
+  despite being well designed. What would trigger such a failure, and which
+  mechanisms would likely break down first?
+
+  \item Based on the case, explain why effective ERM reduces vulnerability but
+  does not eliminate the possibility of failure.
+\end{enumerate}
+
+\section{Group exercise: designing ERM for a complex firm}
+
+This exercise asks you to design an enterprise risk management (ERM) system
+for a firm operating in a highly uncertain and capital-intensive environment.
+You are not asked to replicate an existing framework, but to propose a coherent
+ERM design that could realistically function within the organization described
+below.
+
+\subsection{Firm description}
+
+Consider a large multinational firm operating in a capital-intensive industry
+with global operations. The firm is exposed to volatile input prices, complex
+supply chains, geopolitical risk, regulatory uncertainty, and long-term
+structural change in its core markets. Its activities generate substantial cash
+flows in normal conditions, but downside risks can materialize rapidly and
+simultaneously across business lines.
+
+The firm has grown through a combination of organic investment and acquisitions.
+As a result, its operations are diversified but organizational complexity is
+high. Decision-making authority is largely decentralized, with business units
+having significant autonomy over investments and commercial strategy. Central
+functions exist, but their influence varies across the organization.
+
+The firm has experienced episodes of stress in the past, including periods of
+sharp earnings volatility and operational incidents. These events did not
+threaten its survival, but they revealed weaknesses in coordination, escalation,
+and anticipation of adverse scenarios. Senior management has therefore decided
+to strengthen enterprise-wide risk management.
+
+\subsection{Constraints and objectives}
+
+Senior management has defined the following high-level objectives for ERM:
+
+The ERM system should support strategic decision-making rather than operate as
+a compliance or reporting exercise. It should improve the firm’s ability to
+anticipate adverse outcomes, manage risk interactions, and preserve resilience
+under stress. At the same time, ERM should not paralyze decision-making or
+eliminate risk-taking, which remains essential to value creation.
+
+You should assume that management is willing to support ERM in principle, but
+that incentives, power structures, and time constraints may limit how far
+formal processes can go. Your design should therefore be realistic and
+implementable.
+
+\subsection{Tasks}
+
+Your group is asked to propose an ERM design covering the following dimensions.
+You should justify each design choice by explicitly linking it to the firm’s
+context and constraints.
+
+\paragraph{1. ERM philosophy and scope}
+
+Describe the overall philosophy of your ERM system. Will it be primarily
+principles-based or rules-based? Will it focus on a limited set of material
+risks or attempt comprehensive coverage? Explain how your chosen philosophy
+helps decision-makers under uncertainty.
+
+\paragraph{2. ERM architecture and governance}
+
+Propose an ERM architecture that specifies:
+who owns risks,
+who oversees risks,
+and how risk information flows to senior management and the board.
+Explain how your design balances decentralization of decision-making with
+enterprise-wide coherence. Identify where challenge should occur and who has
+the authority to escalate concerns.
+
+\paragraph{3. Risk identification and assessment}
+
+Explain how material risks should be identified and assessed.
+How would you ensure that emerging risks and interactions between risks are
+captured, rather than only well-known or easily measurable risks?
+Discuss the role of quantitative metrics versus qualitative judgment and
+scenario analysis.
+
+\paragraph{4. Risk response and use of instruments}
+
+Describe how your ERM system would govern risk responses.
+Which types of risks should be mitigated, transferred, retained, or avoided?
+How should the use of financial instruments, such as derivatives or insurance,
+be constrained and monitored to avoid creating new enterprise-level risks?
+
+\paragraph{5. Integration into strategy and capital allocation}
+
+Explain how ERM should be embedded into strategic planning, budgeting, and
+capital allocation.
+How would your design ensure that risk considerations influence major
+investment decisions without becoming a purely formal requirement?
+
+\paragraph{6. Reporting, dashboards, and escalation}
+
+Propose principles for ERM reporting.
+What information should be escalated, to whom, and under what conditions?
+How would you design dashboards so that they support action rather than
+reassurance?
+
+\paragraph{7. Failure modes}
+
+Identify two plausible scenarios in which your ERM design could still fail.
+Explain which assumptions would break down and which parts of the system would
+be most vulnerable. What early warning signals would you expect to see before
+failure becomes unavoidable?
+
+\subsection{Expected output}
+
+Your group should produce a short written proposal (2--3 pages) summarizing
+your ERM design and the reasoning behind it. There is no single correct answer;
+the quality of your proposal will be assessed based on coherence, realism, and
+ability to anticipate trade-offs and failure modes.
+
 
 
 \end{document}
